<resources>
    <string name="app_name">BookShelf</string>

    <string name="username_hint">phone number, email, or username</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be  min 8 characters with at least one number, one special characters[!@#$%&amp;()],
                                    one lowercase letter, and one uppercase letter is mandatory</string>
    <string name="password">Password</string>
    <string name="btn_login">Login</string>
    <string name="already_signedin">You are now done with login. Move to your real MainActivity</string>
    <string name="title_activity_enable_biometric_login">Enable BiometricLogin</string>
    <string name="enable_biometric_login">Enable Biometric Login</string>
    <string name="desc_biometrics_authorization">Enter your login ID and password to confirm activation of Biometric Login.</string>
    <string name="cancel">Cancel</string>
    <string name="btn_authorize">Authorize</string>
    <string name="prompt_info_title">Sample App Authentication</string>
    <string name="prompt_info_subtitle">Please login to get access</string>
    <string name="prompt_info_description">Sample App is using Android biometric authentication</string>
    <string name="prompt_info_use_app_password">Use app password</string>
    <string name="secret_key_name">biometric_sample_encryption_key</string>
    <string name="password_hint">Password</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="use_biometrics">Use biometrics</string>
    <string name="signup_text">Sign Up?</string>
    <string name="name">Name</string>

    <string name="open_nav">Open Navigation Drawer</string>
    <string name="close_nav">Close Navigation Drawer</string>
    <string name="this_is_used_to_add_tags_or_annotation_to_a_book">This is used to add tags or annotation to a book</string>
    <string name="enter_a_tag">Enter a tag</string>
</resources>